add matmul_native test case

--- a/src/cuda/gemm/CMakeLists.txt
+++ b/src/cuda/gemm/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(matmul_cuda STATIC ${CMAKE_CURRENT_SOURCE_DIR}/matmul.cu)
 target_include_directories(matmul_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
 
 add_executable(matmul_test ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
-target_link_libraries(matmul_test PRIVATE cusparse cublas matmul_cuda)
+target_link_libraries(matmul_test PRIVATE cusparse cublas matmul_cuda GTest::gtest_main)
