--- a/src/cuda/reduce/CMakeLists.txt
+++ b/src/cuda/reduce/CMakeLists.txt
@@ -8,3 +8,6 @@ target_include_directories(reduce_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
 
 add_executable(reduce_test ${CMAKE_CURRENT_SOURCE_DIR}/reduce_test.cpp)
 target_link_libraries(reduce_test PRIVATE cusparse cublas reduce_cuda GTest::gtest_main)
+
+add_executable(reduce_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/reduce_benchmark.cpp)
+target_link_libraries(reduce_benchmark PRIVATE cusparse cublas reduce_cuda GTest::gtest_main)
