add reduce kernel v4 reduce kernel v5

--- a/src/cuda/reduce/CMakeLists.txt
+++ b/src/cuda/reduce/CMakeLists.txt
@@ -2,7 +2,10 @@ add_library(reduce_cuda
             STATIC 
             ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v0.cu 
             ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v1.cu 
-            ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v2.cu)
+            ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v2.cu
+            ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v3.cu
+            ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v4.cu
+            ${CMAKE_CURRENT_SOURCE_DIR}/reduce_v5.cu)
 
 target_include_directories(reduce_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
 
