add rmsnorm_v2 use float4 to optimize

--- a/src/cuda/rmsnorm/CMakeLists.txt
+++ b/src/cuda/rmsnorm/CMakeLists.txt
@@ -2,7 +2,9 @@ add_library(rmsnorm_cuda
             STATIC 
             ${CMAKE_CURRENT_SOURCE_DIR}/flashinfer_rmsnorm.cu 
             ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v0.cu
-            ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v1.cu)
+            ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v1.cu
+            ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v2.cu
+            )
 
 target_include_directories(rmsnorm_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
 
