add rmsnorm_v3 use shared memory to optimize

--- a/src/cuda/rmsnorm/CMakeLists.txt
+++ b/src/cuda/rmsnorm/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(rmsnorm_cuda
             ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v0.cu
             ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v1.cu
             ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v2.cu
+            ${CMAKE_CURRENT_SOURCE_DIR}/rmsnorm_v3.cu
             )
 
 target_include_directories(rmsnorm_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
