add gemm block optimization

--- a/src/cpu/gemm/CMakeLists.txt
+++ b/src/cpu/gemm/CMakeLists.txt
@@ -11,6 +11,14 @@ add_library(gemm_cpu
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_v6.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_v7.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_v8.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v3.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v4.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v5.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v6.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v7.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v8.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v9.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v10.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_blas.cpp
             )
 target_link_libraries(gemm_cpu PRIVATE ${BLAS_LIBRARIES})
