add gemm_4x8block v13 v14 v15

--- a/src/cpu/gemm/CMakeLists.txt
+++ b/src/cpu/gemm/CMakeLists.txt
@@ -21,6 +21,9 @@ add_library(gemm_cpu
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v10.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x4block_v11.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v12.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v13.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v14.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v15.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/gemm_blas.cpp
             )
 target_link_libraries(gemm_cpu PRIVATE ${BLAS_LIBRARIES})
