--- a/src/cpu/gemm/CMakeLists.txt
+++ b/src/cpu/gemm/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(BLAS REQUIRED)
+find_package(OpenMP REQUIRED)
 
 add_library(gemm_cpu
   STATIC
@@ -29,13 +30,15 @@ add_library(gemm_cpu
   ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v18.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v19.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/gemm_4x8block_v20.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/gemm_omp_v18.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/gemm_blas.cpp
 )
-target_link_libraries(gemm_cpu PRIVATE ${BLAS_LIBRARIES})
+
+target_link_libraries(gemm_cpu PRIVATE ${BLAS_LIBRARIES} OpenMP::OpenMP_CXX)
 
 add_executable(gemm_test gemm_test.cpp)
-target_link_libraries(gemm_test PRIVATE gemm_cpu ${BLAS_LIBRARIES})
+target_link_libraries(gemm_test PRIVATE gemm_cpu ${BLAS_LIBRARIES} OpenMP::OpenMP_CXX)
 
 
 add_executable(gemm_benchmark gemm_benchmark.cpp)
-target_link_libraries(gemm_benchmark PRIVATE gemm_cpu ${BLAS_LIBRARIES})
+target_link_libraries(gemm_benchmark PRIVATE gemm_cpu ${BLAS_LIBRARIES} OpenMP::OpenMP_CXX)
