--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ if(USE_CPU)
 endif()
 
 if(USE_CUDA)
+  enable_language(CUDA)
   set(CMAKE_CUDA_STANDARD 20)
   set(CMAKE_CUDA_SEPARABLE_COMPILATION OFF)
   set(CMAKE_CUDA_ARCHITECTURES 86)
