--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -1,7 +1,9 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/benchmark)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utils)
 include_directories(/home/gx/Projects/OpenSources/flashinfer/include/)
+include_directories(/home/gx/Projects/OpenSources/cutlass/include/)
 
 add_subdirectory(gemm)
 add_subdirectory(reduce)
 add_subdirectory(rmsnorm)
+add_subdirectory(gemv)
