--- a/src/cuda/gemv/CMakeLists.txt
+++ b/src/cuda/gemv/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(gemv_cuda STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/gemv_v0.cu
+  ${CMAKE_CURRENT_SOURCE_DIR}/gemv_v1.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/gemv_cutlass.cu
 )
 target_include_directories(gemv_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
