add cublas gemv

--- a/src/cuda/gemv/CMakeLists.txt
+++ b/src/cuda/gemv/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(gemv_cuda STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/gemv_v5.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/gemv_v6.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/gemv_cutlass.cu
+  ${CMAKE_CURRENT_SOURCE_DIR}/gemv_cublas.cu
 )
 target_include_directories(gemv_cuda PUBLIC ${CUDA_INCLUDE_DIRS})
 
@@ -14,4 +15,4 @@ add_executable(gemv_test ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 target_link_libraries(gemv_test PRIVATE cusparse cublas gemv_cuda GTest::gtest_main)
 
 add_executable(gemv_benchmark ${CMAKE_CURRENT_SOURCE_DIR}/benchmark.cpp)
-target_link_libraries(gemv_benchmark PRIVATE gemv_cuda)
+target_link_libraries(gemv_benchmark PRIVATE cublas gemv_cuda)
